--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@t3-oss/env-nextjs": "^0.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.268.0",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
